--- a/packages/ui/src/components/organisms/Newsletter/styles.scss
+++ b/packages/ui/src/components/organisms/Newsletter/styles.scss
@@ -5,9 +5,8 @@
 
   // Default properties
   --fs-newsletter-padding-mobile                    : var(--fs-spacing-4) var(--fs-spacing-3) var(--fs-spacing-5);
-  --fs-newsletter-padding-desktop                   : var(--fs-spacing-4) 0 var(--fs-spacing-5);
-  --fs-newsletter-bkg                               : var(--fs-color-primary-bkg);
-  --fs-newsletter-text-color                        : var(--fs-color-text-inverse);
+  --fs-newsletter-padding-desktop                   : var(--fs-spacing-9) 10%;
+  --fs-newsletter-border-radius                     : 0;
 
   // Title
   --fs-newsletter-title-size                        : var(--fs-text-size-title-section);
@@ -15,6 +14,18 @@
 
   // Card
   --fs-newsletter-card-border-radius                : var(--fs-border-radius);
+
+  // Main
+  --fs-newsletter-main-bkg-color                    : var(--fs-color-primary-bkg);
+  --fs-newsletter-main-text-color                   : var(--fs-color-primary-text);
+
+  // Light
+  --fs-newsletter-light-bkg-color                   : var(--fs-color-secondary-bkg-light);
+  --fs-newsletter-light-text-color                  : var(--fs-color-text-display);
+
+  // Accent
+  --fs-newsletter-accent-bkg-color                  : var(--fs-color-highlighted-bkg);
+  --fs-newsletter-accent-text-color                 : var(--fs-newsletter-light-text-color);
 
   // --------------------------------------------------------
   // Structural Styles
@@ -24,13 +35,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: var(--fs-newsletter-padding-mobile);
-  color: var(--fs-newsletter-text-color);
-  background-color: var(--fs-newsletter-bkg);
-
-  @include media(">=notebook") {
-    padding: var(--fs-newsletter-padding-desktop);
-  }
+  border-radius: var(--fs-newsletter-border-radius);
 
   [data-fs-newsletter-form] {
 
@@ -38,8 +43,11 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       column-gap: var(--fs-spacing-8);
-      padding-top: var(--fs-spacing-6);
-      padding-bottom: var(--fs-spacing-6);
+      padding: var(--fs-newsletter-padding-mobile);
+
+      @include media(">=notebook") {
+        padding: var(--fs-newsletter-padding-desktop);
+      }
 
       [data-fs-newsletter-header] {
         align-content: flex-start;
@@ -85,7 +93,6 @@
     justify-content: center;
     font-size: var(--fs-newsletter-title-size);
     font-weight: var(--fs-newsletter-title-weight);
-    color: var(--fs-newsletter-text-color);
 
     @include media(">=notebook") {
       justify-content: left;
@@ -136,5 +143,20 @@
     [data-fs-newsletter-header] h3 {
       justify-content: center;
     }
+  }
+
+  &[data-fs-newsletter-color-variant="main"] {
+    background-color: var(--fs-newsletter-main-bkg-color);
+    color: var(--fs-newsletter-main-text-color);
+  }
+
+  &[data-fs-newsletter-color-variant="light"] {
+    background-color: var(--fs-newsletter-light-bkg-color);
+    color: var(--fs-newsletter-light-text-color);
+  }
+
+  &[data-fs-newsletter-color-variant="accent"] {
+    background-color: var(--fs-newsletter-accent-bkg-color);
+    color: var(--fs-newsletter-accent-text-color);
   }
 }
